gcc/testsuite/gdc.test/compilable/imports/test22714a.d
module imports.test22714a;
import imports.test22714b;
class Statement {}
