gcc/testsuite/gdc.test/fail_compilation/imports/a15816.d
module imports.a15816;

class
{
}
